<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_item_2">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/homeFragmentTitle"
            android:checked="true"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_user"
            android:title="@string/profileFragmentTitle" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@android:drawable/btn_star"
            android:title="@string/favouritesItemText" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settingsItemText" />
        <item
            android:id="@+id/nav_close_session"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/closeSessionItemText" />
    </group>

</menu>
