<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/st_bg_primary"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/forgotPasswordLogoImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/icon_white_pillar"
                android:contentDescription="@string/iconLogoDescription" />

            <TextView
            android:id="@+id/forgotPasswordNameTextView"
            style="@style/TextViewLogoSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name" />

            <TextView
                android:id="@+id/forgotPasswordExplanationText"
                style="@style/ExplanationTextSecondaryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/forgotPasswordExplanationText"
                android:layout_marginTop="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/forgotPasswordMailInputLayout"
                style="@style/TextInputLayoutStyle">

                <Elements.MailEditText
                    android:id="@+id/forgotPasswordMailInput"
                    style="@style/EditTextSecondaryStyle"
                    android:drawableStart="@drawable/icon_mail"
                    android:hint="@string/mailHint"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/forgotPasswordSubmitButton"
                    style="@style/ButtonPrimaryContainedStyle"
                    android:layout_gravity="end"
                    android:onClick="onSubmitButtonClick"
                    android:text="@string/submitText" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>